# niuma-cli

./: AGENTS.md  README.md  pyproject.toml  开发文档.md  开发文档预览.html  系统规则更新结果.html
.codex/skills/niuma-cli/: SKILL.md
.codex/skills/niuma-cli/agents/: openai.yaml
.codex/skills/niuma-cli/references/: project-guide.md
docs/dev/: config-recovery-and-tags.md
src/niuma_cli/: __init__.py  app.py  cli.py  config.py  db.py  interactive.py  output.py  time_utils.py
src/niuma_cli/services/: activity.py  dailies.py  progress.py  projects.py  search.py  stats.py  tags.py  todos.py
tests/: test_cli.py
